2008-03-19  Justin Garcia  <justin.garcia@apple.com>

        Reviewed by Oliver.
        
        <rdar://problem/5794920> Acid3: Assertion failure in VisiblePosition::previous when clicking on results (17004)

        * editing/pasteboard/4989774.html: Updated to wait for the images to load before trying to copy it.
        * editing/selection/5794920-1-expected.txt: Added.
        * editing/selection/5794920-1.html: Added.

2008-03-19  Dan Bernstein  <mitz@apple.com>

        Reviewed by Sam Weinig.

        - test for assertion failure in RenderBlock::determineStartPosition() at http://www.wired.com/techbiz/it/magazine/16-04/bz_apple

        * fast/repaint/line-flow-with-floats-10.html: Added.
        * platform/mac/fast/repaint/line-flow-with-floats-10-expected.checksum: Added.
        * platform/mac/fast/repaint/line-flow-with-floats-10-expected.png: Added.
        * platform/mac/fast/repaint/line-flow-with-floats-10-expected.txt: Added.

2008-03-19  Dan Bernstein  <mitz@apple.com>

        Reviewed by John Sullivan.

        - test for <rdar://problem/5805070> CrashTracer: [USER] 33 crashes in Safari at com.apple.WebCore: WebCore::FrameView::layout + 431

        * fast/dynamic/subtree-parent-static-y.html: Added.
        * platform/mac/fast/dynamic/subtree-parent-static-y-expected.checksum: Added.
        * platform/mac/fast/dynamic/subtree-parent-static-y-expected.png: Added.
        * platform/mac/fast/dynamic/subtree-parent-static-y-expected.txt: Added.

2008-03-19  Mark Rowe  <mrowe@apple.com>

        Reviewed by Oliver Hunt.

        Test for http://bugs.webkit.org/show_bug.cgi?id=17939
        Bug 17939: Crash decompiling "const a = 1, b;"

        * fast/js/function-toString-parentheses-expected.txt:
        * fast/js/resources/function-toString-parentheses.js:

2008-03-18  Oliver Hunt  <oliver@apple.com>

        Reviewed by Mark Rowe.

        Bug 17929: Incorrect decompilation with |const|, comma